src/snapshots/tests__parse_oreo_10.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedFound(
        Identifier(
            "",
        ),
        RangedObject {
            inner: Literal(
                Integer(
                    99,
                ),
            ),
            range: 237..239,
        },
    ),
)
