src/snapshots/tests__parse_oreo_2.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedFound(
        Punctuation(
            Semicolon,
        ),
        RangedObject {
            inner: Keyword(
                Print,
            ),
            range: 259..264,
        },
    ),
)
