src/snapshots/tests__parse_oreo_3.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedOneOfFound(
        [
            Keyword(
                Var,
            ),
            Keyword(
                If,
            ),
            Keyword(
                Print,
            ),
            Keyword(
                Println,
            ),
            Keyword(
                Get,
            ),
            Keyword(
                While,
            ),
            Keyword(
                Procedure,
            ),
            Keyword(
                Return,
            ),
            Identifier(
                "",
            ),
        ],
        RangedObject {
            inner: Punctuation(
                Semicolon,
            ),
            range: 244..245,
        },
    ),
)
