src/snapshots/tests__parse_oreo_4.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedFound(
        Punctuation(
            BracketClose,
        ),
        EnrichedToken {
            inner: Keyword(
                Begin,
            ),
            line_no: 17,
        },
    ),
)
