src/snapshots/tests__parse_oreo_5.snap
---
source: src/parser.rs
expression: parsed
---
Err(
    ExpectedButFoundEOF(
        Punctuation(
            Semicolon,
        ),
    ),
)
